# irstlm-5.80.08

./: Chinese_add_start_end.txt  English_add_start_end.txt  test_corpus_en.txt  test_corpus_zh.txt  test_wordList.txt
regression-testing/tests/build-lm/: command
regression-testing/tests/build-lm-sublm/: command
regression-testing/tests/build-lm-sublm2/: command
regression-testing/tests/plsa/: command
regression-testing/tests/plsa2/: command
trunk/: CMakeLists.txt  README
trunk/doc/: RELEASE
trunk/scripts/: CMakeLists.txt  Makefile.am  add-start-end-ex.sh  add_start_end.py  character-statistics  download.sh  google-ngram  languageinfo  languageinfo.py  languageparse.py  lm2golatindata.py  lm2golatindata.sh  make_lm.sh  make_lm_google.sh  merge-files.sh  ngtbatch.sh  nlp.py  word-filter.sh  word_filter.py
trunk/src/: quantize-lm.cpp
