INSTALL(PROGRAMS
        add-start-end.sh
        build-lm-qsub.sh
        build-lm.sh
        build-sublm.pl
        goograms2ngrams.pl
        lm-stat.pl
        mdtsel.sh
        merge-sublm.pl
        ngram-split.pl
        plsa.sh
        qplsa.sh
        rm-start-end.sh
        sort-lm.pl
        split-dict.pl
        split-ngt.sh
        wrapper
        add-start-end-ex.sh
        add_start_end.py
        languageinfo        
        languageinfo.py
        languageparse.py
        nlp.py
        word-filter.sh
        word_filter.py
        lm2golatindata.py
        lm2golatindata.sh
        merge-files.sh
        make_lm.sh
        google-ngram
        make_lm_google.sh
	download.sh
        ngtbatch.sh
        DESTINATION bin
        PERMISSIONS OWNER_EXECUTE OWNER_READ OWNER_WRITE
)
