wrapperbindir = @prefix@/bin

dist_wrapperbin_SCRIPTS = \
add-start-end.sh \
build-lm-qsub.sh \
build-lm.sh \
rm-start-end.sh \
split-ngt.sh \
mdtsel.sh \
build-sublm.pl \
goograms2ngrams.pl \
lm-stat.pl \
merge-sublm.pl \
ngram-split.pl \
sort-lm.pl \
split-dict.pl \
plsa.sh \
qplsa.sh \
add-start-end-ex.sh \
add_start_end.py \
languageinfo.json \
languageinfo.py \
languageparse.py \
word-filter.sh \
word_filter.py \
lm2golatindata.py \
lm2golatindata.sh \
merge-files.sh \
make_lm.sh

EXTRA_DIST = wrapper

